[package]
name = "kparse"
version = "1.0.0"
edition = "2021"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5"
bytecount = "^0.6"
chrono = "0.4"
humantime = "2.1"

[dependencies.nom]
version = "7.1"
features = [ "alloc" ]

[dependencies.nom_locate]
version = "4.0"

