[package]
name = "kparse"
version = "1.1.0"
authors = [ "thomasscharler <thscharler@gmail.com>" ]
edition = "2021"
description = "Tracking and better error handling for nom parsers"
readme = "readme.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/kparse"
keywords = [ "parser", "nom" ]
categories = [ "parsing" ]
exclude = [".idea/*", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.5"
bytecount = "^0.6"

[dependencies.nom]
version = "7.1"
features = [ "alloc" ]

[dependencies.nom_locate]
version = "4.0"

[dev-dependencies]
glob = "0.3"
chrono = "0.4"
humantime = "2.1"
rust_decimal = "1.27"
rust_decimal_macros = "1.27"

[features]
track_nom = []
alloc = ["nom/alloc"]
default = ["std", "track_nom"]
generic-simd = ["bytecount/generic-simd"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
std = [ "nom/std", "alloc", "memchr/use_std"]
